# pricerecon

./: .env.example  .gitignore  ACCEPTANCE_CRITERIA.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.yml  docker-compose.yml  pricerecon.db  pyproject.toml  test_scheduler.py  test_scheduler_debug.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  connector_request.md  feature_request.md
.github/workflows/: ci.yml
cli/: pricerecon_cli.py
docs/: ALIEXPRESS_CONTRACT.md  CONNECTOR_REQUIREMENTS.md  EBAY_CONNECTOR.md  FLARESOLVERR_DEPENDENCY_EVIDENCE.md  FLARESOLVERR_DEPLOYMENT.md  REDDIT_FALLBACK.md  argos-musicmagpie-implementation.md  argos-musicmagpie-verification.md  connector-development.md  connector-integration-patterns.md  engineering-standard.md  returns-pattern.md  vinted_gumtree_audit.md
docs/adr/: 0001-watch-query-and-matching-model.md
docs/specs/: watch-query-and-matching-model.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: EventLog.tsx  PriceHistoryChart.tsx  SourceHealth.tsx  WatchDetail.tsx  WatchForm.tsx  WatchList.tsx  index.css  watchTypes.ts
frontend/src/components/__tests__/: WatchForm.test.ts
frontend/src/components/layout/: AppShell.tsx  MobileNav.tsx  SidebarNav.tsx  TopActionBar.tsx
frontend/src/components/ui/: ActionMenu.tsx  EmptyState.tsx  SearchableMultiselect.tsx  SectionCard.tsx  StatusBadge.tsx  dialog.tsx  scroll-area.tsx  toast.tsx
frontend/src/context/: DataContext.tsx  index.ts
frontend/src/hooks/: usePageTitle.ts
frontend/src/lib/: categoryUtils.ts  dateUtils.ts  sourceNames.ts  watchPayload.ts
frontend/src/pages/: Connectors.tsx  Events.tsx  Exports.tsx  Notifications.tsx  Runs.tsx  Settings.tsx
frontend/src/styles/: components.css  layout.css  pages.css  tokens.css
scripts/: check_flaresolverr.sh  test_flaresolverr_connectors.py
src/pricerecon/: __init__.py  __main__.py  app.py  cli.py  config.py  quality_gate.py
src/pricerecon/api/: __init__.py  auth.py  events.py  export.py  health.py  history.py  listings.py  signals.py  sources.py  watches.py
src/pricerecon/connectors/: __init__.py  aliexpress.py  amazon.py  ao.py  argos.py  aria.py  backmarket.py  base.py  box.py  browser_client.py  camelcamelcamel.py  ccl.py  cdkeys.py  cex.py  costco_uk.py  currys.py  dell_uk.py  depop.py  ebay.py  ebuyer.py  ee_gaming.py  etsy.py  fb_marketplace.py  flaresolverr.py  game_digital.py  google_shopping.py  gumtree.py  hotukdeals.py  html.py  johnlewis.py  laptopsdirect.py  mercari_uk.py  musicmagpie.py  novatech.py  onbuy.py  overclockers.py  price.py  reddit.py  reddit_bapcsalesuk.py  reddit_hardwareswapuk.py  (+9 more)
src/pricerecon/connectors/templates/: ao.yml  aria.yml  backmarket.yml  box.yml  ccl.yml  cdkeys.yml  currys.yml  depop.yml  ebuyer.yml  etsy.yml  generic-shopify.yml  laptopsdirect.yml  mercari.yml  novatech.yml  onbuy.yml  overclockers.yml  scan.yml  very.yml
src/pricerecon/core/: __init__.py  connector_health.py  diff_engine.py  hardware_routes.py  notifications.py  rate_limiter.py  schedule.py  scheduler.py  title_matching.py  token_store.py  watch_executor.py
src/pricerecon/db/: schema.py
src/pricerecon/models/: __init__.py  listings.py  rate_limit.py  watches.py
tests/: __init__.py  test_amazon.py  test_amazon_authenticity.py  test_ao.py  test_api.py  test_argos_musicmagpie.py  test_backmarket.py  test_browser_client.py  test_camelcamelcamel.py  test_cli.py  test_connectors.py  test_costco_uk.py  test_deploy_migration.py  test_ebay_oauth.py  test_ebay_startup_burst.py  test_ee_gaming.py  test_etsy.py  test_flaresolverr_batch_structure.py  test_frontend_payload_validation.py  test_game_digital.py  test_google_shopping_connector.py  test_gumtree.py  test_hardware_routes.py  test_john_lewis_registry_migration.py  test_laptopsdirect.py  test_notifications.py  test_rate_limiter.py  test_reddit_api.py  test_reddit_fallbacks.py  test_source_queries_routing.py  test_timeout_retailers.py  test_title_matching.py  test_token_store.py  test_very_uk.py  test_vinted.py
