[project]
name = "pricerecon"
version = "0.1.0"
description = "Self-hosted price tracking for search queries across multiple sources"
authors = [
    {name = "Jay Stothard", email = "jtstothard@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "selectolax>=0.3.19",
    "beautifulsoup4>=4.12.3",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "apscheduler>=3.10.4",
    "pytz>=2024.1",
    "curl-cffi>=0.6.2",
    "playwright>=1.41.0",
    "pyyaml>=6.0.1",
    "aiosqlite>=0.19.0",
    "returns>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "respx>=0.22.0",
    "black>=24.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "types-pytz>=2024.1",
    "types-PyYAML>=6.0.1",
]

[project.scripts]
pricerecon = "pricerecon.cli:main"
quality-gate = "pricerecon.quality_gate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[project.entry-points."pricerecon.connectors"]
ebay = "pricerecon.connectors.ebay:eBayConnector"
amazon_uk = "pricerecon.connectors.amazon:AmazonConnector"
cex = "pricerecon.connectors.cex:CexConnector"
scan = "pricerecon.connectors.scan:ScanConnector"
overclockers = "pricerecon.connectors.overclockers:OverclockersConnector"
box = "pricerecon.connectors.box:BoxConnector"
currys = "pricerecon.connectors.currys:CurrysConnector"
ebuyer = "pricerecon.connectors.ebuyer:EbuyerConnector"
ccl = "pricerecon.connectors.ccl:CclConnector"
novatech = "pricerecon.connectors.novatech:NovatechConnector"
aria = "pricerecon.connectors.aria:AriaConnector"
shopify = "pricerecon.connectors.shopify:ShopifyConnector"
facebook_marketplace = "pricerecon.connectors.fb_marketplace:FacebookMarketplaceConnector"
aliexpress = "pricerecon.connectors.aliexpress:AliExpressConnector"
johnlewis = "pricerecon.connectors.johnlewis:JohnLewisConnector"
dell_uk = "pricerecon.connectors.dell_uk:DellUKConnector"
reddit_hardwareswapuk = "pricerecon.connectors.reddit:RedditHardwareSwapUKConnector"
reddit_bapcsalesuk = "pricerecon.connectors.reddit:RedditBapcSalesUKConnector"
hotukdeals = "pricerecon.connectors.reddit:HotUKDealsConnector"
google_shopping = "pricerecon.connectors.google_shopping:GoogleShoppingConnector"
camelcamelcamel = "pricerecon.connectors.camelcamelcamel:CamelCamelCamelConnector"
costco_uk = "pricerecon.connectors.costco_uk:CostcoUKConnector"
laptopsdirect = "pricerecon.connectors.laptopsdirect:LaptopsDirectConnector"
game_digital = "pricerecon.connectors.game_digital:GameDigitalConnector"
ee_gaming = "pricerecon.connectors.ee_gaming:EEGamingConnector"
argos = "pricerecon.connectors.argos:ArgosConnector"
musicmagpie = "pricerecon.connectors.musicmagpie:MusicMagpieConnector"
backmarket = "pricerecon.connectors.backmarket:BackMarketConnector"
depop = "pricerecon.connectors.depop:DepopConnector"
mercari_uk = "pricerecon.connectors.mercari_uk:MercariUKConnector"
onbuy = "pricerecon.connectors.onbuy:OnBuyConnector"
etsy = "pricerecon.connectors.etsy:EtsyConnector"
very_uk = "pricerecon.connectors.very_uk:VeryUKConnector"
vinted = "pricerecon.connectors.vinted:VintedConnector"
gumtree = "pricerecon.connectors.gumtree:GumtreeConnector"
ao = "pricerecon.connectors.ao:AOConnector"
cdkeys = "pricerecon.connectors.cdkeys:CDKeysConnector"
